tests/NormalTests/paczka1/small_fuzzy/24873033.err
Error in line 11: qB6w A97 14,46
Error in line 5: Dgde S249 8,3
Error in line 12: Dgde A97 52,0
